# SSS

./: .gitconfig  .gitignore  Cargo.toml  README.md
matrix_input/: Cargo.toml
matrix_input/gaussian/: Cargo.toml
matrix_input/gaussian/src/: func.rs  main.rs
matrix_input/gaussian/tests/: tests.rs
matrix_input/src/: main.rs
src/: feonar.rs  func copy.rs  func.rs  lib.rs  main.rs
src/lrss_py/: Shamir.py  shamirv2.py  tests.py
tests/: basic.rs
