[package]
name = "sss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ark-ff = "0.4.2"
ark-serialize = { version = "0.4.2", features = ["derive"] }
nalgebra = "0.32.5"
rand = "0.8.5"
ark-std = { version = "0.4.0", features = ["std", "getrandom"]}
num = { version = "0.4.3", features = ["std"]}
itertools = "0.13.0"
polynomen = "1.1.0"
rust-polynomial = "1.0.0"
ark-poly = "0.4.2"